# python-web-course-project

./: .env.example  .gitignore  alembic.ini  docker-compose.yml  main.py  pyproject.toml  readme.md  requirements.txt  test.txt
app/src/conf/: config.py
app/src/database/: connect_db.py  models.py
app/src/repository/: comments.py  contacts.py  images.py  rates.py  tags.py  users.py
app/src/routes/: auth.py  comments.py  contacts.py  images.py  rates.py  tags.py  users.py
app/src/schemas/: comments.py  contacts.py  images.py  rates.py  tags.py  tokens.py  users.py
app/src/services/: _cloudinary.py  auth.py  cloudinary.py  email.py  email_service.py  qr_code.py  roles.py
app/src/services/templates/: password_reset_email.html  verification_email.html
app/src/utils/: as_form.py  is_leap_year.py
doc/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 101a994a2353_init.py  b988a19bacce_upgrade.py
tests/: conftest.py  create_tables.py  seed.py  test_routes_auth.py  test_routes_comments.py  test_routes_contacts.py  test_routes_rates.py  test_routes_tags.py  test_routes_users.py  test_unit_repository_comments.py  test_unit_repository_contacts.py  test_unit_repository_images.py  test_unit_repository_rates.py  test_unit_repository_tags.py  test_unit_repository_users.py
