[tool.poetry]
name = "PhotoShare API"
version = "0.1.0"
description = ""
authors = ["Pynctual Adventurers"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.0"}
sqlalchemy = "^2.0.35"
faker = "^29.0.0"
aiohttp = "^3.10.5"
alembic = "^1.13.3"
uvicorn = "^0.30.6"
psycopg2-binary = "^2.9.9"
pydantic = "^2.9.2"
asyncpg = "^0.29.0"
greenlet = "^3.1.1"
libgravatar = "^1.0.4"
jose = "^1.0.0"
passlib = "^1.7.4"
python-multipart = "^0.0.10"
bcrypt = "4.0.1"
pydantic-settings = "^2.5.2"
redis = "^5.0.8"
fastapi-limiter = "^0.1.6"
cloudinary = "^1.41.0"
fastapi-mail = "^1.4.1"
pycryptodome = "^3.20.0"
pytest = "^8.3.3"
aiosqlite = "^0.20.0"
sphinx = "^8.0.2"
poetry-plugin-export = "^1.8.0"
python-jose = "^3.3.0"
qrcode = "^8.0"
nest-asyncio = "^1.6.0"
wheel = "^0.44.0"
setuptools = "^75.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
